# hypersdk-graphql

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pixi.toml
.github/workflows/: ci.yml  release-hypecli.yml
abi/: IIrm.json  IMetaMorphoV1_1.json  IMorpho.json  IUniswapV3Factory.json  IUniswapV3Pool.json
examples/: morpho_borrow_apy.rs  morpho_borrow_rate.rs  morpho_create_market_events.rs  morpho_highest_apy.rs  morpho_supply_apy.rs  morpho_vault_apy.rs  prjx_flows.rs
examples/hypercore/: approve_agent.rs  buy_and_transfer.rs  credentials.rs  list-hip3.rs  multisig_approve_agent.rs  multisig_send_asset.rs  send_order.rs  send_usd.rs  transfer_from_evm.rs  transfer_to_evm.rs  transfer_to_perps.rs  transfer_to_spot.rs  websocket.rs
examples/morpho/: borrow_apy.rs  create_market_events.rs  supply_apy.rs  vault_apy.rs  vault_performance.rs
examples/mytrade/: NOTES.md  portfolio_manager.rs  scanner.rs
examples/uniswap/: pools_created.rs  prjx_flows.rs
hypecli/: Cargo.toml  README.md
hypecli/src/: main.rs  multisig.rs  utils.rs
src/: lib.rs
src/hypercore/: http.rs  mod.rs  signing.rs  types.rs  utils.rs  ws.rs
src/hypercore/types/: api.rs  mod.rs
src/hyperevm/: mod.rs
src/hyperevm/morpho/: contracts.rs  mod.rs
src/hyperevm/uniswap/: contracts.rs  mod.rs
