## Package metadata
[package]
name = "hypersdk"
version = "0.1.0"
edition = "2024"
authors = ["Dario <dario@infinitefieldtrading.com>"]
license = "MPL-2.0"
description = "Rust SDK for Hyperliquid"
repository = "https://github.com/infinitefield/hypersdk"
homepage = "https://github.com/infinitefield/hypersdk"
readme = "README.md"
keywords = ["hyperliquid", "sdk", "trading", "dex", "perps"]
documentation = "https://github.com/infinitefield/hypersdk"
rust-version = "1.85.0"

include = [
  "src/**",
  "README.md",
  "LICENSE*",
  "Cargo.toml",
]
exclude = [
  "/.github/*",
  "/examples/*",
  "/tests/*",
  "/.gitignore",
]

[[example]]
name = "list-hip3"
path = "examples/hypercore/list-hip3.rs"

[[example]]
name = "multisig_order"
path = "examples/hypercore/multisig_order.rs"

[[example]]
name = "multisig_send_usd"
path = "examples/hypercore/multisig_send_usd.rs"

[[example]]
name = "multisig_send_asset"
path = "examples/hypercore/multisig_send_asset.rs"

[[example]]
name = "buy_and_transfer"
path = "examples/hypercore/buy_and_transfer.rs"

[[example]]
name = "list_markets"
path = "examples/hypercore/list-markets.rs"

[[example]]
name = "list_tokens"
path = "examples/hypercore/list-tokens.rs"

[[example]]
name = "send_order"
path = "examples/hypercore/send_order.rs"

[[example]]
name = "send_usd"
path = "examples/hypercore/send_usd.rs"

[[example]]
name = "transfer_from_evm"
path = "examples/hypercore/transfer_from_evm.rs"

[[example]]
name = "transfer_to_evm"
path = "examples/hypercore/transfer_to_evm.rs"

[[example]]
name = "transfer_to_perps"
path = "examples/hypercore/transfer_to_perps.rs"

[[example]]
name = "transfer_to_spot"
path = "examples/hypercore/transfer_to_spot.rs"

[[example]]
name = "websocket"
path = "examples/hypercore/websocket.rs"

[[example]]
name = "morpho_borrow_apy"
path = "examples/morpho/borrow_apy.rs"

[[example]]
name = "morpho_create_market_events"
path = "examples/morpho/create_market_events.rs"

[[example]]
name = "morpho_vault_performance"
path = "examples/morpho/vault_performance.rs"

[[example]]
name = "morpho_highest_apy"
path = "examples/morpho/highest_apy.rs"

[[example]]
name = "morpho_supply_apy"
path = "examples/morpho/supply_apy.rs"

[[example]]
name = "morpho_vault_apy"
path = "examples/morpho/vault_apy.rs"

[[example]]
name = "uniswap_pools_created"
path = "examples/uniswap/pools_created.rs"

[[example]]
name = "uniswap_prjx_flows"
path = "examples/uniswap/prjx_flows.rs"

## Documentation (docs.rs) configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

## Runtime dependencies
[dependencies]
alloy = { version = "1.1.1", default-features = false, features = ["contract", "eip712", "getrandom", "providers", "reqwest", "rpc", "rpc-types", "signer-local", "signers", "sol-types"] }
anyhow = "1.0.100"
chrono = { version = "0.4", default-features = false, features = ["std"] }
const-hex = { version = "1.17", features = ["serde"] }
derive_more = { version = "2", features = ["display", "is_variant"] }
either = { version = "1", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
reqwest = "0.12"
rmp-serde = "1"
rust_decimal = { version = "1.39", features = ["macros", "maths", "serde", "serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["test-util", "time"] }
url = "2"
yawc = { version = "0.2", features = ["json", "logging", "simd"] }
hex-literal = "0.4"

## Development and test dependencies
[dev-dependencies]
alloy = { version = "1", features = ["pubsub"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15.7"
indicatif = "0.18.3"
simple_logger = "5"
tokio = { version = "1", features = ["full"] }
